--- a/templates/report/defect_intelligence.html
+++ b/templates/report/defect_intelligence.html
@@ -11,7 +11,7 @@
     </div>
     <ul>
     {% for item in highlights %}
-        <li>{{ item.label }}: {{ item.value }}</li>
+        <li>{{ item.label }}: {{ '%.2f'|format(item.value) }}</li>
     {% endfor %}
     </ul>
 </section>
