--- a/templates/report/operator_reject.html
+++ b/templates/report/operator_reject.html
@@ -16,8 +16,8 @@
                 {% for op in operators %}
                     <tr>
                         <td>{{ op.name }}</td>
-                        <td>{{ op.inspected }}</td>
-                        <td>{{ op.rejected }}</td>
+                        <td>{{ '%.2f'|format(op.inspected) }}</td>
+                        <td>{{ '%.2f'|format(op.rejected) }}</td>
                         <td>{{ '%.2f'|format(op.rate) }}%</td>
                     </tr>
                 {% endfor %}
