--- a/templates/report/fc_ng_ratio.html
+++ b/templates/report/fc_ng_ratio.html
@@ -1,4 +1,4 @@
-<section class="report-section">
+<section id="fc-ng-ratio" class="report-section">
     <p class="section-desc">Shows each model's false-call to NG part ratio.</p>
     <div class="chart-block">
         <img src="{{ fcNgRatioImg }}" alt="FC/NG Ratio">
