--- a/templates/report/model_false_calls.html
+++ b/templates/report/model_false_calls.html
@@ -1,4 +1,4 @@
-<section class="report-section">
+<section id="model-false-calls" class="report-section">
     <p class="section-desc">Analyzes false calls per model and flags assemblies needing review.</p>
     <div class="chart-block">
         <img src="{{ modelFalseCallsImg }}" alt="False Calls by Model">
