--- a/templates/report/yield_trend.html
+++ b/templates/report/yield_trend.html
@@ -1,4 +1,4 @@
-<section class="report-section">
+<section id="yield-trend" class="report-section">
     <p class="section-desc">Shows yield performance over the selected date range.</p>
     <div class="chart-block">
         <img src="{{ yieldTrendImg }}" alt="Yield Trend">
