Add operator report page and export

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
           <a href="#">Reports <span class="arrow">&#9662;</span></a>
           <div class="dropdown">
             <a href="{{ url_for('main.integrated_report') }}">AOI Integrated Report</a>
+            <a href="{{ url_for('main.operator_report') }}">Operator Report</a>
           </div>
         </li>
       </ul>
