Add operator filter to operator report

--- a/templates/operator_report.html
+++ b/templates/operator_report.html
@@ -13,6 +13,10 @@
       <label for="end-date">End Date</label>
       <input type="date" id="end-date" />
     </div>
+    <div class="field">
+      <label>Operator</label>
+      <div id="operator-wrapper"></div>
+    </div>
     <button type="button" id="run-report">Run</button>
   </div>
 </div>
