--- a/templates/operator_report.html
+++ b/templates/operator_report.html
@@ -21,78 +21,28 @@
   </div>
 </div>
 
-  <details id="charts" class="section-card">
-    <summary>Preview Charts</summary>
-    <div>
-      <div class="chart-block">
-        <canvas id="yieldTrendChart"></canvas>
-        <div class="chart-summary">
-          <p id="yieldTrendDesc"></p>
-          <table id="yieldTrendTable" class="data-table"><tbody></tbody></table>
-        </div>
-      </div>
-      <div class="chart-block">
-        <canvas id="operatorRejectChart"></canvas>
-        <div class="chart-summary">
-          <p id="operatorRejectDesc"></p>
-          <table id="operatorRejectTable" class="data-table">
-            <thead>
-              <tr>
-                <th>Operator</th>
-                <th>Inspected</th>
-                <th>Rejected</th>
-                <th>Reject %</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </div>
-      <div class="chart-block">
-        <canvas id="modelFalseCallsChart"></canvas>
-        <div class="chart-summary">
-          <p id="modelFalseCallsDesc"></p>
-          <table id="problem-assemblies" class="data-table"><tbody></tbody></table>
-        </div>
-      </div>
-      <div class="chart-block">
-        <canvas id="fcVsNgRateChart"></canvas>
-        <div class="chart-summary">
-          <p id="fcVsNgDesc"></p>
-          <table id="fcVsNgRateTable" class="data-table"><tbody></tbody></table>
-        </div>
-      </div>
-      <div class="chart-block">
-        <canvas id="fcNgRatioChart"></canvas>
-        <div class="chart-summary">
-          <p id="fcNgRatioDesc"></p>
-          <table id="fcNgRatioTable" class="data-table">
-            <thead>
-              <tr>
-                <th>Model</th>
-                <th>FalseCall Parts</th>
-                <th>NG Parts</th>
-                <th>FC/NG Ratio</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </div>
+<div id="dailySection" class="section-card" style="display:none">
+  <div class="chart-block">
+    <canvas id="dailyChart"></canvas>
+    <div class="chart-summary">
+      <p id="dailyDesc"></p>
+      <table id="dailyTable" class="data-table">
+        <thead>
+          <tr><th>Date</th><th>Reject %</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-  </details>
-
-<div class="field-row" id="download-controls">
-  <div class="field">
-    <label for="file-format">Format</label>
-    <select id="file-format">
-      <option value="pdf">pdf</option>
-      <option value="xlsx">xlsx</option>
-      <option value="html">html</option>
-    </select>
   </div>
-  <button id="download-report">Download</button>
-  <button id="email-report">Email Report</button>
+</div>
+
+<div id="assemblySection" class="section-card" style="display:none">
+  <table id="assemblyTotals" class="data-table">
+    <thead>
+      <tr><th>Assembly</th><th>Inspected</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
 {% endblock %}
 
