Include FI reject rate in operator report

--- a/static/css/report.css
+++ b/static/css/report.css
@@ -159,6 +159,10 @@ header img {
     color: #888;
 }
 
+.null-value {
+    color: #bbb;
+}
+
 .data-table {
     width: 100%;
     border-collapse: collapse;
