Split report cover templates by type

--- a/templates/report/integrated/index.html
+++ b/templates/report/integrated/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     {% if show_cover %}
-        {% include 'report/cover.html' %}
+        {% include 'report/integrated/cover.html' %}
     {% endif %}
     {% if show_summary %}
         {% include 'report/summary_toc.html' %}
