--- a/templates/report/operator/index.html
+++ b/templates/report/operator/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     {% if show_cover %}
-        {% include 'report/cover.html' %}
+        {% include 'report/operator/cover.html' %}
     {% endif %}
     {% if show_summary %}
         {% include 'report/operator_summary_toc.html' %}
