Allow cover page selection in report downloads

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -87,6 +87,10 @@
       <option value="html">html</option>
     </select>
   </div>
+  <div class="field">
+    <label for="include-cover">Cover Page</label>
+    <input type="checkbox" id="include-cover" checked />
+  </div>
   <button id="download-report">Download</button>
   <button id="email-report">Email Report</button>
 </div>
