Add AOI daily report API and navigation entry

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
           <div class="dropdown">
             <a href="{{ url_for('main.integrated_report') }}">AOI Integrated Report</a>
             <a href="{{ url_for('main.operator_report') }}">Operator Report</a>
+            <a href="{{ url_for('main.aoi_daily_report_page') }}">AOI Daily Report</a>
           </div>
         </li>
       </ul>
